|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-04-21 Benedikt Heintel
	- GUI:
		* fixed bug #146: array warnings and notices in reseller functions
	- LANGUAGES:
		* German: fixed bug #204

2007-04-19 Benedikt Heintel
	- GUI:
		* fixed bug #185: can't edit custom menu buttons

2007-04-18 Benedikt Heintel
	- DISTS:
		* Fedora: updated files
		* Gentoo: updated files
		* SuSE 10.0: updated files
		* SuSE 9.3: updated files
	- DOCS:
		* SuSE: updated installation
	- ENGINE:
		* fixed backup not running due to abort
	- GUI:
		* fixed stupid default domain error
		* fixed bug #165: encoding not set
		* added link to admin-panel in default e-mail
		* changed all ISPCP Pro to ispCP
		* changed debugger layout
	- TOOLS:
		* PMA update 2.10.2-RC1
	- RELEASE ispCP ω Omega 1.0.0 RC2

2007-04-17 Benedikt Heintel
	- CONFIGS:
		* fixed bug #174: master not longer reachable on adding Domain
	- ENGINE:
		* fixed bug #174: master not longer reachable on adding Domain

2007-04-16 Benedikt Heintel
	- LANGUAGES:
		* Romanian: added missing strings
		* Spanish: added language (Spain)
	- GUI:
		* renamed ispcp-2-0.php => ispcp-functions.php
	- SETUP:
		* fixed erron on uninstall

2007-04-11 Malte Geierhos
	- RELEASE:
		* name change of project: VHCS ω => ispCP ω

2007-04-14 Jan Porath
	- GUI:
		* fixed bug: add alias domains fails
		* fixed bug: #164 port check update deletes protocol entry

2007-04-07 Benedikt Heintel
	- LANGUAGES:
		* Romanian: added language

2007-04-05 Benedikt Heintel
	- GUI:
		* fixed bug: update available was shown, even if no update was available
	- ENGINE:
		* fixed bug #158: Backup breaks on bzip if file not exists
	- LANGUAGES:
		* English: fixed spelling mistake
		* French: changed translated strings
		* Spanish: added Spanish Spain