@@ -1,6 +1,6 @@
 <?php
 /**
- *  ispCP (OMEGA) - Virtual Hosting Control System | Omega Version
+ *  ispCP (OMEGA) a Virtual Hosting Control Panel
  *
  *  @copyright 	2001-2006 by moleSoftware GmbH
  *  @copyright 	2006-2007 by ispCP | http://isp-control.net
@@ -75,122 +75,121 @@ $tpl -> prnt();
 // BEGIN FUNCTION DECLARE PATH
 //
 
-
-function gen_hp_message (&$tpl)
-{
+function gen_hp_message (&$tpl) {
   //global $externel_event, $hp_added, $hp_deleted, $hp_updated;
-  global $externel_event;
+  global $external_event;
 
   if (isset($_SESSION["hp_added"]) && $_SESSION["hp_added"] == '_yes_') {
-    $externel_event = '_on_';
-    set_page_message(tr('Hosting plan added!'));
-    unset($_SESSION["hp_added"]);
-    if (isset($GLOBALS['hp_added']))
-      unset($GLOBALS['hp_added']);
-    //session_unregister("hp_added");
-  } else if (isset($_SESSION["hp_deleted"]) && $_SESSION["hp_deleted"] == '_yes_') {
-    $externel_event = '_on_';
-    set_page_message(tr('Hosting plan deleted!'));
-    unset($_SESSION["hp_deleted"]);
-    if (isset($GLOBALS['hp_deleted']))
-      unset($GLOBALS['hp_deleted']);
-    //session_unregister("hp_deleted");
-  } else if (isset($_SESSION["hp_updated"]) && $_SESSION["hp_updated"] == '_yes_') {
-    $externel_event = '_on_';
-    set_page_message(tr('Hosting plan updated!'));
-    unset($_SESSION["hp_updated"]);
-    if (isset($GLOBALS['hp_updated']))
-      unset($GLOBALS['hp_updated']);
-    //session_unregister("hp_updated");
-  }
+	$external_event = '_on_';
+	set_page_message(tr('Hosting plan added!'));
+	unset($_SESSION["hp_added"]);
+	if (isset($GLOBALS['hp_added']))
+		unset($GLOBALS['hp_added']);
+	}
+	else if (isset($_SESSION["hp_deleted"]) && $_SESSION["hp_deleted"] == '_yes_') {
+		$external_event = '_on_';
+		set_page_message(tr('Hosting plan deleted!'));
+		unset($_SESSION["hp_deleted"]);
+		if (isset($GLOBALS['hp_deleted']))
+	  		unset($GLOBALS['hp_deleted']);
+	}
+	else if (isset($_SESSION["hp_updated"]) && $_SESSION["hp_updated"] == '_yes_') {
+		$external_event = '_on_';
+		set_page_message(tr('Hosting plan updated!'));
+		unset($_SESSION["hp_updated"]);
+		if (isset($GLOBALS['hp_updated']))
+	  		unset($GLOBALS['hp_updated']);
+	}
 } // End of gen_hp_message()
 
 
 // Extract and show data for hosting plants
-function gen_hp_table(&$tpl, $reseller_id)
-{
-  global $sql, $externel_event, $cfg;
+function gen_hp_table(&$tpl, $reseller_id) {
+	global $sql, $cfg;
 
-  if (isset($cfg['HOSTING_PLANS_LEVEL']) && $cfg['HOSTING_PLANS_LEVEL'] === 'admin'){
-  $query = <<<SQL_QUERY
-        SELECT
-            t1.id, t1.reseller_id, t1.name, t1.props, t1.status,
-			t2.admin_id, t2.admin_type
-        FROM
-            hosting_plans AS t1,
-			admin AS t2
-        WHERE
-            t2.admin_type=?
-		  AND
-			t1.reseller_id = t2.admin_id
-		  AND
-			t1.status=1
-        ORDER BY
-            t1.name
+	if (isset($cfg['HOSTING_PLANS_LEVEL']) && $cfg['HOSTING_PLANS_LEVEL'] === 'admin') {
+		$query = <<<SQL_QUERY
+	        SELECT
+	            t1.id, t1.reseller_id, t1.name, t1.props, t1.status,
+				t2.admin_id, t2.admin_type
+	        FROM
+	            hosting_plans AS t1,
+				admin AS t2
+	        WHERE
+	            t2.admin_type=?
+			  AND
+				t1.reseller_id = t2.admin_id
+			  AND
+				t1.status=1
+	        ORDER BY
+	            t1.name
 SQL_QUERY;
-	$rs = exec_query($sql, $query, array('admin'));
-	$tr_edit = tr('View details');
-	$tpl -> assign('HP_MENU_ADD', '');
 
-  } else {
+		$rs = exec_query($sql, $query, array('admin'));
+		$tr_edit = tr('View details');
+		$tpl -> assign('HP_MENU_ADD', '');
 
-  $query = <<<SQL_QUERY
-        SELECT
-            id, name, props, status
-        FROM
-            hosting_plans
-        WHERE
-            reseller_id = ?
-        ORDER BY
-            name
+	}
+	else {
+
+	  $query = <<<SQL_QUERY
+	        SELECT
+	            id, name, props, status
+	        FROM
+	            hosting_plans
+	        WHERE
+	            reseller_id = ?
+	        ORDER BY
+	            name
 SQL_QUERY;
-	$rs = exec_query($sql, $query, array($reseller_id));
-	$tr_edit = tr('Edit');
-  }
+		$rs = exec_query($sql, $query, array($reseller_id));
+		$tr_edit = tr('Edit');
+	}
 
+	if ($rs -> RowCount() == 0) {
+		// if ($externel_event == '_off_') {
+		set_page_message(tr('Hosting plans not found!'));
+		//}
+		$tpl -> assign('HP_TABLE', '');
+	}
+	else { // There are data for hosting plants :-)
+		if ($externel_event == '_off_') {
+  			$tpl -> assign('HP_MESSAGE', '');
+		}
 
+		$tpl -> assign(array('TR_HOSTING_PLANS' => tr('Hosting plans'),
+		                     'TR_NOM' => tr('No.'),
+							 'TR_EDIT' => $tr_edit,
+		                     'TR_PLAN_NAME' => tr('Name'),
+		                     'TR_ACTION' => tr('Action')));
 
-  if ($rs -> RowCount() == 0) {
-    // if ($externel_event == '_off_') {
-    set_page_message(tr('Hosting plans not found!'));
-    //}
-    $tpl -> assign('HP_TABLE', '');
-  } else { // There are data for hosting plants :-)
-    if ($externel_event == '_off_') {
-      $tpl -> assign('HP_MESSAGE', '');
-    }
+		$i = 1;
 
-    $tpl -> assign(array('TR_HOSTING_PLANS' => tr('Hosting plans'),
-                         'TR_NOM' => tr('No.'),
-						 'TR_EDIT' => $tr_edit,
-                         'TR_PLAN_NAME' => tr('Name'),
-                         'TR_ACTION' => tr('Action')));
+		while ($data = $rs -> FetchRow()) {
+	  		if ($i % 2 == 0) {
+	    		$tpl -> assign(array('CLASS_TYPE_ROW' => 'content'));
+	  		} else {
+	   			$tpl -> assign(array('CLASS_TYPE_ROW' => 'content2'));
+	  		}
+	  		$status = $data['status'];
+	  		if ($status == 1) {
+	  			$status = tr('Enabled');
+	  		} else {
+	  			$status = tr('Disabled');
+	  		}
 
-    $i = 1;
+	 		$tpl -> assign(array('PLAN_NOM' => $i++,
+		                       'PLAN_NAME' => stripslashes($data['name']),
+		                       'PLAN_ACTION' => tr('Delete'),
+						  	   'PLAN_SHOW' => tr('Show hosting plan'),
+		                       'PURCHASING' => $status,
+		                       'HP_ID' => $data['id'],
+						  	   'RESELLER_ID' => $_SESSION['user_id']));
+	  		$tpl -> parse('HP_ENTRY', '.hp_entry');
+		} // End  loop
 
-    while ($data = $rs -> FetchRow()) {
-      if ($i % 2 == 0) {
-        $tpl -> assign(array('CLASS_TYPE_ROW' => 'content'));
-      } else {
-        $tpl -> assign(array('CLASS_TYPE_ROW' => 'content2'));
-      }
-	  $status = $data['status'];
-	  if ($status == 1) {
-	  	$status = tr('Enabled');
-	  } else {
-	  	$status = tr('Disabled');
-	  }
-
-      $tpl -> assign(array('PLAN_NOM' => $i++,
-                           'PLAN_NAME' => stripslashes($data['name']),
-                           'PLAN_ACTION' => tr('Delete'),
-						   'PURCHASING' => $status,
-                           'HP_ID' => $data['id']));
-      $tpl -> parse('HP_ENTRY', '.hp_entry');
-    } // End  loop
-
-    $tpl -> parse('HP_TABLE', 'hp_table');
-  }
+		$tpl -> parse('HP_TABLE', 'hp_table');
+	}
 } // End of gen_hp_table()
 
 
